kubernetes/Cluster-Int-Temp/deployments/media/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: media
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: linuxserver/overseerr:v1.33.2-ls102
          volumeMounts:
            - name: pvc
              mountPath: /config
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: overseerr
