kubernetes/Cluster-Int-Temp/deployments/media/overseerr/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: overseerr
    namespace: media
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:+tN+EU8ScMHQ3TeSDChvxfJPEbWjt2w=,iv:nHJPDRZ/gU3A47ZPeqHqzm6vCxUnR5G+cMNoPOvp+RU=,tag:u3bl4W2BzuxqR+xN8mPGcA==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:2f57ZtcvM64Z,iv:jc/vVajYJBjhf8eiq3069TV5WsbgHesvYMtu23mbyKg=,tag:M44JlYEgAWASOzONbnd4eQ==,type:str]
              port: ENC[AES256_GCM,data:eyEkAw==,iv:1kX846IJkEdzY4OxB75IIIrOue9+5oAISrFIc2wlQdM=,tag:LfgFAhYZqxdBe3slz083yw==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:r7BVSb8XCNMR6z0WPPI=,iv:c8TCF8cC0YeDx2ffl+bW8ntVwfdXNAdaD/f4jOiwHkU=,tag:+gjXf0jSd68LtwHuKBQVuA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLTWpOSDhwVlh3cGFocURk
[...]
            k8Ldu5Uw9O36ds2rDy8+aKmRUKKmWMG2O8Y32NuDo0FqYzj7vE2xuQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-13T21:38:59Z"
    mac: ENC[AES256_GCM,data:W6Te9r780WExlScsPdVrKu/Tg88xJr43031XvavxTTVaMI6w2n1XFhgznbouwqTqlyzflmAkRhE/KEU5so4Jz0lSVZ094Ciyi/2MxRzRwLKOPOD02WrwPhu8NL+gYoPnq0SmOyNoUfdg/RYoAyc5UoNRmHF6R/GBrP/m440BN28=,iv:XM1cbnx/b2ek1Xq30Pvf9O8XT8unHOvbLQ24Dopp5O4=,tag:FqqMSYDV/M2JJf1qEmclfg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
